# ROS

./: .gitattributes  README.md
damion/: CMakeLists.txt  package.xml
damion/msg/: object_info.msg
damion/src/: crack_segmentation.ipynb  file_rename.ipynb  image_show.ipynb  segmentation.py  visualiaztion.py  yolo_detection.cpp
midterm/: CMakeLists.txt  package.xml
midterm/ShellScripts/: midterm.sh
midterm/action/: route.action
midterm/launch/: sensor.launch
midterm/msg/: camera.msg  emergency.msg  lidar.msg  thermovision.msg
midterm/scripts/: Brake_System.py
midterm/src/: Camera_Sensor.cpp  Control_Center.cpp  Disinfection.cpp  Emergency_Center.cpp  Lidar_Sensor.cpp  Robot_Control.cpp  Thermovision_Camera.cpp
midterm/srv/: disinfection.srv
